<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RequestFragment">

    <LinearLayout
        android:id="@+id/progress_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/request_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="96dp">

            <Spinner
                android:id="@+id/spinner_provider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/provider_list"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/et_api_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/api_key"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <Button
                    android:id="@+id/button_save_api_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_api_key" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/language"
                android:inputType="textPersonName" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_use_gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/use_gps" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="monospace"
                    android:hint="@string/latitude"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/et_longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="monospace"
                    android:hint="@string/longitude"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/units" />

            <Spinner
                android:id="@+id/spinner_units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:entries="@array/unit_list" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/request_type" />

            <RadioGroup
                android:id="@+id/rg_request_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:checkedButton="@id/rb_current_weather">

                <RadioButton
                    android:id="@+id/rb_current_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current_weather" />

                <RadioButton
                    android:id="@+id/rb_today_astronomy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/today_astronomy" />

                <RadioButton
                    android:id="@+id/rb_hourly_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hourly_weather" />

                <RadioButton
                    android:id="@+id/rb_daily_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_weather" />

                <RadioButton
                    android:id="@+id/rb_all_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_in_one" />

                <RadioButton
                    android:id="@+id/rb_air_quality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/air_quality" />
            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_play_arrow_white_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>